# Sorting-App

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  project.toml
docs/: info.txt
src/: main.cpp
src/app/: window.cpp  window.h  window.ui
src/app/sorts/: array.cpp  core.cpp  heap_sort.cpp  merge_sort.cpp  metrics.cpp  quick_sort.cpp  sorts.h
src/evaluation/: sorting_metrics.csv
